--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Wojciech Pituła
 description: 'Heuristically Optimized Person'
 url: 'http://w.pitula.me'
-baseurl: '/'
+baseurl: ''
 google_analytics: 'UA-88803396-1'
 disqus_shortname: 'kreverspace'
 
@@ -29,11 +29,15 @@ permalink: /:year/:title/
 markdown: kramdown
 highlighter: rouge
 
+sass:
+    sass_dir: _sass
+    style: compressed
+
 kramdown:
   # use Github Flavored Markdown
   input: GFM
   # do not replace newlines by <br>s
   hard_wrap: false
 
-gems: ['jekyll-paginate']
+plugins: ['jekyll-paginate']
 exclude: ['README.md', 'Gemfile', 'Gemfile.lock', 'screenshot.png']
